interpolatemd and sonarqube changes